# share-scraper

./: .gitattributes  .gitignore  Cargo.toml  README.md  pom.xml
db/: Cargo.toml
db/queries/share/: insert_details.sql  insert_market_info.sql  insert_performance_metrics.sql  insert_price_data.sql
db/src/: isins.rs  lib.rs  metrics.rs  share_queries.rs  shares.rs  utils.rs
migrations/: 20241125161559_share_isins.sql  20241125161608_share_details.sql  20241125161627_market_information.sql  20241125161631_price_data.sql  20241125161642_performance_metrics.sql  20241127100518_price_data.sql  20241201192349_price_data.sql  20241201192416_share_details.sql  20241201192425_market_information.sql  20241201192431_performance_metrics.sql  20241207165852_share_isins.sql  20241213201331_share_isins.sql  20241213201332_share_details.sql  20241213201333_market_information.sql  20241213201334_price_data.sql  20241213201335_performance_metrics.sql
scraper/: Cargo.toml
scraper/src/: errors.rs  exponential_backoff.rs  lib.rs  metrics.rs  utils.rs
scraper/src/isins/: mod.rs  types.rs
scraper/src/shares/: mod.rs  parsers.rs  property_selector.rs
scraper/src/shares/models/: gen_macro.rs  market_information.rs  mod.rs  performance_metrics.rs  price_data.rs  share.rs  share_details.rs
scraper_utils/: Cargo.toml
scraper_utils/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: exponential_backoff.rs  main.rs  utils.rs
src/db/: utils.rs
src/isins/: mod.rs  types.rs
src/main/java/com/leo/scraper/: Main.java  Scraper.java
src/main/java/com/leo/scraper/isin/: IsinFile.java  IsinLoader.java  IsinScraper.java  IsinStore.java
src/main/java/com/leo/scraper/selectors/: Selectors.java  ShareInfoSelectors.java
src/main/java/com/leo/scraper/share/: OldShare.java  Share.java  ShareProps.java
src/main/java/com/leo/scraper/share/parser/: ShareParser.java  SpecialRows.java
src/main/java/com/leo/scraper/test/: ExecuteWithDuration.java  TestIsinLoader.java  TestIsinsScraper.java  TestShares.java
src/main/java/com/leo/scraper/url/: BorsaItaliana.java  CustomURL.java
src/shares/: mod.rs  parsers.rs  selectors.rs  types.rs
src/shares/models/: gen_macro.rs  market_information.rs  mod.rs  performance_metrics.rs  price_data.rs  share_details.rs
src/test/java/com/leo/scraper/: BaseScraperTest.java  ScraperElementsTest.java  ScraperMiscTest.java  ScraperParsingTest.java
(+2 files in other folders)
