[workspace]
members = [ "db",
  "scraper", "scraper_utils",
  "server",
]

[package]
name = "share_service"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper_utils = { path = "scraper_utils" }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

