[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = {version = "0.8.2", features = ["runtime-tokio", "postgres" , "chrono"] }
tracing = "0.1.41"
futures = "0.3.31"
scraper = { path = "../scraper" }
serde = "1.0.215"
chrono = { version = "0.4.38", features = ["serde"] }
